[gd_scene load_steps=4 format=3 uid="uid://cd54mdn8dn4ci"]

[ext_resource type="Script" path="res://Scenes/HUD/WisdomUpgradeBar.gd" id="1_7mtht"]
[ext_resource type="Script" path="res://Scenes/HUD/LabelWithRichTooltip.gd" id="2_ruvyb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25uh2"]
bg_color = Color(0.247059, 0.305882, 0.345098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="WisdomUpgradeBar" type="HBoxContainer" node_paths=PackedStringArray("_name_label", "_progress_bar", "_progress_label")]
size_flags_horizontal = 3
script = ExtResource("1_7mtht")
_name_label = NodePath("NameLabel")
_progress_bar = NodePath("MarginContainer/ProgressBar")
_progress_label = NodePath("MarginContainer/ProgressLabel")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
mouse_filter = 0
script = ExtResource("2_ruvyb")

[node name="Spacer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MinusButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "-"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_25uh2")
show_percentage = false

[node name="ProgressLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0/8"
horizontal_alignment = 1

[node name="PlusButton" type="Button" parent="."]
layout_mode = 2
text = "+"

[node name="MaxButton" type="Button" parent="."]
layout_mode = 2
text = "Max"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2

[connection signal="pressed" from="MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="MaxButton" to="." method="_on_max_button_pressed"]
